--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --header-card-height: 200px; /* adjust to match combined Header + Card height */
+  --nav-height: 60px; /* adjust to match Navigation height */
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -10,4 +15,10 @@
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.fill-available {
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 100vw;
 }
